<resources>
    <string name="app_name">Date with Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="delete_all">Delete all</string>
    <string name="enter_task">Enter Task</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_food">Add Food</string>
    <string name="choose_exp_date"><font color='red'>*</font>Choose expiration date</string>
    <string name="enter_item_name"><font color='red'>*</font>Enter Item Name</string>
    <string name="enter_amount"><font color='red'>*</font>Enter Amount</string>
    <string name="update_string">Update</string>
    <string name="scan_barcode">Scan</string>
    <string name="storage">Storage</string>
    <string name="shopping_list">Shopping List</string>
    <string name="continuous_buying"><u>Want to buy regularly?</u>  </string>
    <string name="bought">Bought </string>
    <string name="add_item">Add item</string>
    <string name="delete_all_bought">Delete bought</string>
    <string name="recently_uploaded">Recently Updated</string>
    <string name="sort_by_expire_date">Earliest Expire Date</string>
    <string name="notify_text1">Notify me</string>
    <string name="notify_text2">day(s) before expire</string>
    <string name="enter_notify_days">1</string>
    <string-array name="priorities">
        <item>Meat</item>
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Medicine</item>
        <item>Makeup</item>
        <item>Skincare</item>
        <item>Other</item>
    </string-array>
    <string-array name="units">
        <item>unit</item>
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>L</item>
    </string-array>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_id_hint">Enter contact\'s ID</string>
    <string name="uid">UID</string>
    <string name="copy_uid">Copy Uid</string>
    <string name="type_your_user_name">Type Your User Name</string>
    <string name="share">Share</string>
    <string name="chat">Chat</string>
    <string name="request">Request Item</string>
    <string name="send">Send</string>
</resources>