<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_barcode"
        android:icon="@drawable/ic_barcode"
        android:title="@string/scan_barcode"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_priority"
        android:title="@string/sort_by_type"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_recently_uploaded"
        android:title="@string/recently_uploaded"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_expire_date"
        android:title="@string/sort_by_expire_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>