<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/shoplist_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/shoplist_sort_by_type"
        android:title="@string/sort_by_type"
        app:showAsAction="never"/>
    <item
        android:id="@+id/shoplist_delete_all_bought"
        android:title="@string/delete_all_bought"
        app:showAsAction="never" />
    <item
        android:id="@+id/shoplist_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>